@@ -78,4 +78,8 @@ Change linker options on macOS to allow Homebrew installs ({ml-pull}225[225])
 
 //=== Bug Fixes
 
+Rules that trigger the `skip_model_update` action should also apply to the anomaly model.
+This fixes an issue where anomaly scores and probabilities on results that triggered
+the rule would reduce is they occurred frequently. (See {pull}222[#222].)
+
 //=== Regressions
